--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.4.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.44.2",
     "browser-image-compression": "^2.0.2",
     "lucide-react": "^0.525.0",
-    "next": "14.2.4",
+    "next": "^14.2.30",
     "react": "^18",
     "react-dom": "^18",
     "replicate": "^0.30.2",
