--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.44.2",
-    "browser-image-compression": "^2.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
-    "next": "^14.2.30",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.3.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "replicate": "^0.30.2",
+    "tailwind-merge": "^3.3.1",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
