--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
     "react": "^19.1.0",
@@ -23,6 +24,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.5.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
