--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.3",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
     "react": "^19.1.0",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "^19.1.0",
     "replicate": "^0.30.2",
     "tailwind-merge": "^3.3.1",
