--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.23.5",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
     "openai": "^5.9.0",
     "react": "^19.1.0",
     "react-compare-slider": "^3.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "replicate": "^0.30.2",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.178.0",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.178.1",
     "@types/zxcvbn": "^4.4.5",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
